[package]
name = "yb-postgres-native-tls"
version = "0.5.0-yb-1"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
homepage = "https://www.yugabyte.com/"
documentation = "https://docs.yugabyte.com/stable/drivers-orms/rust/yb-rust-postgres"
description = "TLS support for yb-tokio-postgres via native-tls"
repository = "https://github.com/yugabyte/rust-postgres"
readme = "../README.md"

[badges]
circle-ci = { repository = "yugabyte/rust-postgres" }

[features]
default = ["runtime"]
runtime = ["yb-tokio-postgres/runtime"]

[dependencies]
native-tls = "0.2"
tokio = "1.0"
tokio-native-tls = "0.3"
yb-tokio-postgres = "0.7.10-yb-1-beta"

[dev-dependencies]
futures-util = "0.3"
tokio = { version = "1.0", features = ["macros", "net", "rt"] }
yb-postgres = "0.19.7-yb-1-beta" 
