[package]
name = "yb-postgres"
version = "0.19.7-yb-1-beta"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
homepage = "https://www.yugabyte.com/"
documentation = "https://docs.yugabyte.com/stable/drivers-orms/rust/yb-rust-postgres"
description = "A native, synchronous YugabyteDB YSQL client"
repository = "https://github.com/yugabyte/rust-postgres"
readme = "../README.md"
keywords = ["database", "postgres", "postgresql", "sql", "yugabyte", "yugabytedb", "ysql"]
categories = ["database"]

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
all-features = true

[badges]
circle-ci = { repository = "yugabyte/rust-postgres" }

[features]
array-impls = ["yb-tokio-postgres/array-impls"]
with-bit-vec-0_6 = ["yb-tokio-postgres/with-bit-vec-0_6"]
with-chrono-0_4 = ["yb-tokio-postgres/with-chrono-0_4"]
with-eui48-0_4 = ["yb-tokio-postgres/with-eui48-0_4"]
with-eui48-1 = ["yb-tokio-postgres/with-eui48-1"]
with-geo-types-0_6 = ["yb-tokio-postgres/with-geo-types-0_6"]
with-geo-types-0_7 = ["yb-tokio-postgres/with-geo-types-0_7"]
with-serde_json-1 = ["yb-tokio-postgres/with-serde_json-1"]
with-smol_str-01 = ["yb-tokio-postgres/with-smol_str-01"]
with-uuid-0_8 = ["yb-tokio-postgres/with-uuid-0_8"]
with-uuid-1 = ["yb-tokio-postgres/with-uuid-1"]
with-time-0_2 = ["yb-tokio-postgres/with-time-0_2"]
with-time-0_3 = ["yb-tokio-postgres/with-time-0_3"]

[dependencies]
bytes = "1.0"
fallible-iterator = "0.2"
futures-util = { version = "0.3.14", features = ["sink"] }
log = "0.4"
yb-tokio-postgres = { version = "0.7.10-yb-1-beta", path = "../tokio-postgres" }
tokio = { version = "1.0", features = ["rt", "time"] }

[dev-dependencies]
criterion = "0.5"
